--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/a7a97fae97.js" crossorigin="anonymous"></script>
  <!-- font -->
  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital@1&display=swap" rel="stylesheet">
-    <title>ML Addis</title>
+    <title>ML Addis Ababa</title>
   </head>
   <body >
     <section class="header ">
